added RabbitMQ export tasks

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 SQL_USER = 'nebus'
 SQL_PASSWORD = 'nebus'
 SQL_DATABASE = 'nebus'
+RABBITMQ_USER = 'admin'
+RABBITMQ_PASSWORD = 'nebus'
+RABBITMQ_HOST = 'rabbitmq'
+RABBITMQ_PORT = '5672'
