refactoring to backend/frontend structure. removed sql dump, added initial migrations

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-SQL_USER = 'nebus'
-SQL_PASSWORD = 'nebus'
-SQL_DATABASE = 'nebus'
+SQL_USER = 'manager'
+SQL_PASSWORD = 'manager'
+SQL_DATABASE = 'companies_catalogue'
 RABBITMQ_USER = 'admin'
-RABBITMQ_PASSWORD = 'nebus'
+RABBITMQ_PASSWORD = 'admin'
 RABBITMQ_HOST = 'rabbitmq'
 RABBITMQ_PORT = '5672'
