--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-name: fastapi-app
-
 services:
   db:
     image: postgis/postgis:17-3.4
@@ -10,22 +8,29 @@ services:
       - POSTGRES_DB=${SQL_DATABASE}
     volumes:
       - postgres-data:/var/lib/postgresql@17/data
-      - ./app/db_backup.sql:/docker-entrypoint-initdb.d/db_backup.sql
     ports:
       - "5432:5432"
     env_file:
       - .env
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${SQL_USER} -d ${SQL_DATABASE}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 30
+      start_period: 10s
 
-  web:
+  backend:
     build:
-      context: .
-      target: app
-    container_name: app
+      context: ./backend
+      target: backend
+    container_name: backend
     ports:
       - "8000:8000"
     depends_on:
-      - db
-      - rabbitmq
+      db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     environment:
       - DATABASE_URL=postgresql://${SQL_USER}:${SQL_PASSWORD}@db:5432/${SQL_DATABASE}
       - RABBITMQ_USER=${RABBITMQ_USER}
@@ -33,7 +38,7 @@ services:
       - RABBITMQ_HOST=rabbitmq
       - RABBITMQ_PORT=5672
     volumes:
-      - ./app:/home/app/web/app
+      - ./backend/app:/home/app/web/app
       - exports-volume:/home/app/web/app/exports
     env_file:
       - .env
@@ -51,29 +56,31 @@ services:
       - rabbitmq-data:/var/lib/rabbitmq
     env_file:
       - .env
+    healthcheck:
+      test: [ "CMD", "rabbitmq-diagnostics", "check_port_connectivity" ]
+      interval: 5s
+      timeout: 5s
+      retries: 30
 
   export_worker:
     build:
-      context: .
+      context: ./backend
       target: worker
     container_name: worker
     volumes:
       - exports-volume:/home/app/web/app/exports
-      - ./app/rabbitmq:/home/app/web/app/rabbitmq
+      - ./backend/app/rabbitmq:/home/app/web/app/rabbitmq
     restart: unless-stopped
     depends_on:
       - db
       - rabbitmq
     env_file:
       - .env
-    environment:
-      - PYTHONUNBUFFERED=1
-      - PYTHONPATH=/home/app/web
     develop:
       watch:
         - action: sync+restart
-          path: ./app/rabbitmq/consumer.py
-          target: ./app/rabbitmq/consumer.py
+          path: ./backend/app/rabbitmq/consumer.py
+          target: ./backend/app/rabbitmq/consumer.py
 
 volumes:
   postgres-data:
