refactored endpoints structure. added routers and api versions

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SQL_USER = 'manager'
 SQL_PASSWORD = 'manager'
-SQL_DATABASE = 'companies_catalogue'
+SQL_DATABASE = 'companies_db'
 RABBITMQ_USER = 'admin'
 RABBITMQ_PASSWORD = 'admin'
 RABBITMQ_HOST = 'rabbitmq'
