--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,26 @@ services:
       retries: 30
       start_period: 10s
 
+  test_db:
+    image: postgis/postgis:17-3.4
+    container_name: test_db
+    environment:
+      - POSTGRES_USER=${SQL_USER}
+      - POSTGRES_PASSWORD=${SQL_PASSWORD}
+      - POSTGRES_DB=test_db
+    volumes:
+      - postgres-data:/var/lib/postgresql@17/data
+    ports:
+      - "5433:5432"
+    env_file:
+      - .env
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${SQL_USER} -d test_db" ]
+      interval: 5s
+      timeout: 5s
+      retries: 30
+      start_period: 10s
+
   backend:
     build:
       context: ./backend
@@ -28,6 +48,8 @@ services:
       - "8000:8000"
     depends_on:
       db:
+        condition: service_healthy
+      test_db:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
